--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -16,15 +16,9 @@
             <div class="line_menu"></div>
             <a class="button_text" href="#">Irregular verbs</a>
             <div class="line_menu"></div>
-            <a class="button_text" href="#">Reset progress</a>
+            <a class="button_text" th:href="@{/option2}">Reset progress</a>
             <div class="line_menu"></div>
             <div>
-<!--                <form th:action="@{/logout}" method="POST">-->
-<!--                    <input type="submit" value="Sign out" hidden/>-->
-<!--                    <button class="button_drop">-->
-<!--                        <p class="button_text">Sign out</p>-->
-<!--                    </button>-->
-<!--                </form>-->
                 <a class="button_text"th:href="@{/logout}">Sign out</a>
             </div>
         </div>
