little changes - repeating functions is ready

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -113,7 +113,7 @@ button {
 }
 
 .repeat_button {
-  display: none;
+  display: flex;
   justify-content: space-around;
 }
 
@@ -123,11 +123,19 @@ button:hover {
 
 .button_text {
   font-size: 3vh;
+  width: auto;
   line-height: 48px;
   letter-spacing: 0.05em;
   text-align: center;
   color: #ffffff;
   opacity: 0.8;
+}
+
+.sign_out {
+  margin-top: 1vh;
+  margin-left: 8vh;
+  margin-bottom: 1vh;
+  opacity: revert;
 }
 
 .login {
@@ -200,6 +208,11 @@ button:hover {
   margin: 0vh 5vh 0vh 5vh;
 }
 
+.line_menu2 {
+  margin: revert;
+  width: 21vh;
+}
+
 .footer_text {
   font-size: 3vh;
   line-height: 48px;
@@ -226,4 +239,31 @@ button:hover {
   text-align: center;
   color: #ffffff;
   opacity: 0.8;
+}
+
+.option_form {
+  margin-left: 40%;
+}
+
+.option_text {
+  font-size: 6vh;
+  text-align: center;
+  padding: 5vh;
+}
+.radio_second_level {
+  margin-left: 5vh;
+  display: grid;
+}
+
+.radio2 {
+  display: block;
+  margin-top: 2vh;
+}
+
+.radio3 {
+  margin-bottom: 2vh;
+}
+
+.reset_form {
+  margin-left: 30%;
 }
