--- a/src/main/resources/templates/option.html
+++ b/src/main/resources/templates/option.html
@@ -12,37 +12,41 @@
     <div th:replace="top"></div>
 
     <div class="content_background">
-        <form th:method="GET" th:action="@{/exercises/{id}(id = ${libraryId})}">
-            <p>Type of training</p>
-            <div >
-                <label class="radio2" for="format1">
-                    <input type="radio" id="format1" name="format" value="learn" disabled>
-                    <span>Learn</span>
-                </label>
-                <div class="line_menu"></div>
-                <label class="radio2" for="format2">
-                    <input type="radio" id="format2" name="format" value="repeat" checked>
-                    <span>Repeat</span>
-                </label>
-            </div>
-            <div >
-                <label class="radio2" for="sort1">
-                    <input type="radio" id="sort1" name="direction" value="direct" checked>
-                    <span>direct</span>
-                </label>
-                <label class="radio2" for="sort2">
-                    <input type="radio" id="sort2" name="direction" value="reverse">
-                    <span>reverse</span>
-                </label>
-                <label class="radio2" for="sort3">
-                    <input type="radio" id="sort3" name="direction" value="shuffle">
-                    <span>shuffle</span>
-                </label>
-            </div>
-            <button class="button" type="submit" id="button">
-                <p class="button_text">Start</p>
-            </button>
-        </form>
+        <div>
+            <p class="option_text">Type of training</p>
+        </div>
+        <div class="option_form">
+            <form  th:method="GET" th:action="@{/exercises/{id}(id = ${libraryId})}">
+                <div>
+                    <label class="radio2 radio3" for="format1">
+                        <input type="radio" id="format1" name="format" value="learn" disabled>
+                        <span class="words_text">Learn</span>
+                    </label>
+                    <div class="line_menu line_menu2"></div>
+                    <label class="radio2" for="format2">
+                        <input type="radio" id="format2" name="format" value="repeat" checked>
+                        <span class="words_text">Repeat</span>
+                    </label>
+                </div>
+                <div class="radio_second_level">
+                    <label class="radio2" for="sort1">
+                        <input type="radio" id="sort1" name="direction" value="direct" checked>
+                        <span class="words_text">direct</span>
+                    </label>
+                    <label class="radio2" for="sort2">
+                        <input type="radio" id="sort2" name="direction" value="reverse">
+                        <span class="words_text">reverse</span>
+                    </label>
+                    <label class="radio2" for="sort3">
+                        <input type="radio" id="sort3" name="direction" value="shuffle">
+                        <span class="words_text">shuffle</span>
+                    </label>
+                </div>
+                <button class="button" type="submit" id="button">
+                    <p class="button_text">Start</p>
+                </button>
+            </form>
+        </div>
     </div>
 
     <div th:replace="footer"></div>
