--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -10,11 +10,11 @@
         <div class="dropdown-content">
             <a class="button_text" th:href="@{/option/1}">Beginner</a>
             <div class="line_menu"></div>
-            <a class="button_text" href="#">Pre-Intermediate</a>
+            <a class="button_text" th:href="@{/option/2}">Pre-Intermediate</a>
             <div class="line_menu"></div>
-            <a class="button_text" href="#">Intermediate</a>
+            <a class="button_text" th:href="@{/option/3}">Intermediate</a>
             <div class="line_menu"></div>
-            <a class="button_text" href="#">Irregular verbs</a>
+            <a class="button_text" th:href="@{/option/4}">Irregular verbs</a>
             <div class="line_menu"></div>
             <a class="button_text" th:href="@{/option2}">Reset progress</a>
             <div class="line_menu"></div>
