--- a/src/main/resources/templates/exercises.html
+++ b/src/main/resources/templates/exercises.html
@@ -41,7 +41,7 @@
                     </p>
                 </button>
                 <button type="button" id="button_2" onclick="showWord()"
-                        th:formaction="@{/learned/{wordId}(wordId = ${word.getId()})}">
+                        th:formaction="@{/repeated/{wordId}(wordId = ${word.getId()})}">
                     <p class="button_text" id="next">
                         Show
                     </p>
