--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,7 +3,7 @@
     <body>
         <div class="background" th:fragment="footer">
             <p class="footer_text" th:text="${libraryName} != null ? 'Total : ' + ${total} : ''"></p>
-            <p class="footer_text" th:text="${libraryName} != null ? 'Repeated : ' + ${learned} : ''"></p>
+            <p class="footer_text" th:text="${libraryName} != null ? 'Repeated : ' + ${repeated} : ''"></p>
         </div>
     </body>
 </html>
