--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -282,3 +282,9 @@ button:hover {
 .div_sound {
   margin-top: 31vh;
 }
+
+.registration_heading_text {
+  font-size: 6vh;
+  text-align: center;
+  padding-top: 5vh;
+}
