--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -5,28 +5,33 @@
     <div class="top">
         <p class="top_text" th:text="${word} != null ? ${libraryName} : 'Learn English'"></p>
     </div>
-    <div class="top" th:inline="text">
-        <p class="top_text" th:inline="text">[[${#httpServletRequest.remoteUser}]]</p>
-    </div>
-    <div class="top dropdown">
-        <img class="image" th:src="@{/img/menu.png}" alt="menu">
-        <div class="dropdown-content">
-            <a class="button_text" th:href="@{/option/1}">Beginner</a>
-            <div class="line_menu"></div>
-            <a class="button_text" th:href="@{/option/2}">Pre-Intermediate</a>
-            <div class="line_menu"></div>
-            <a class="button_text" th:href="@{/option/3}">Intermediate</a>
-            <div class="line_menu"></div>
-            <a class="button_text" th:href="@{/option/4}">Irregular verbs</a>
-            <div class="line_menu"></div>
-            <a class="button_text" th:href="@{/option2}">Reset progress</a>
-            <div class="line_menu"></div>
-            <form th:action="@{/logout}" method="POST">
-                <button class="button_text sign_out" type="submit">
-                    Sign Out
-                </button>
-            </form>
+    <!--    <div class="top">-->
+    <!--        <p class="top_text" th:utext="${remoteUser}"></p>-->
+    <!--    </div>-->
+    <div class="top remote_user">
+        <div>
+            <p class="top_text" th:utext="${remoteUser}"></p>
+        </div>
+        <div class="top dropdown">
+            <img class="image" th:src="@{/img/menu.png}" alt="menu">
+            <div class="dropdown-content">
+                <a class="button_text" th:href="@{/option/1}">Beginner</a>
+                <div class="line_menu"></div>
+                <a class="button_text" th:href="@{/option/2}">Pre-Intermediate</a>
+                <div class="line_menu"></div>
+                <a class="button_text" th:href="@{/option/3}">Intermediate</a>
+                <div class="line_menu"></div>
+                <a class="button_text" th:href="@{/option/4}">Irregular verbs</a>
+                <div class="line_menu"></div>
+                <a class="button_text" th:href="@{/option2}">Reset progress</a>
+                <div class="line_menu"></div>
+                <form th:action="@{/logout}" method="POST">
+                    <button class="button_text sign_out" type="submit">
+                        Sign Out
+                    </button>
+                </form>
 
+            </div>
         </div>
     </div>
 </div>
