--- a/src/main/resources/templates/learn.html
+++ b/src/main/resources/templates/learn.html
@@ -16,49 +16,77 @@
         <div class="table_sound">
             <div class="border_words_learn border_words">
                 <div class="words_learn words">
-                    <p class="words_text" th:utext="${word.getTranslate()}"></p>
+                    <p class="words_text" th:utext="${word.getTranslate()}"
+                       th:if="${learnedField} == 0 or ${learnedField} == 1"></p>
                 </div>
             </div>
         </div>
         <div>
-            <div class="repeat_button" id="word_button1">
-                <button class="button_learn button_2" type="button" th:id="${threeWords.get(0).getWord()}"
-                        th:onclick="'paintButton(\'' + ${word.getWord()} + '\', \'' + ${threeWords.get(0).getWord()} + '\');'">
-                    <p class="button_text_learn button_text" id="word1" th:utext="${threeWords.get(0).getWord()}">
-                        Word
-                    </p>
-                </button>
-            </div>
-            <div class="repeat_button" id="word_button2">
-                <button class="button_learn button_2" type="button" th:id="${threeWords.get(1).getWord()}"
-                        th:onclick="'paintButton(\'' + ${word.getWord()} + '\', \'' + ${threeWords.get(1).getWord()} + '\');'">
-                    <p class="button_text_learn button_text" id="word2" th:utext="${threeWords.get(1).getWord()}">
-                        Word
-                    </p>
-                </button>
-            </div>
-            <div class="repeat_button" id="word_button3">
-                <button class="button_learn button_2" type="button" th:id="${threeWords.get(2).getWord()}"
-                        th:onclick="'paintButton(\'' + ${word.getWord()} + '\', \'' + ${threeWords.get(2).getWord()} + '\');'">
-                    <p class="button_text_learn button_text" id="word3" th:utext="${threeWords.get(2).getWord()}">
-                        Word
-                    </p>
-                </button>
-            </div>
-            <form th:method="GET">
-                <div class="repeat_button" th:id="next_button_div" style="display: none">
-                    <input type="hidden" th:name="learnedField" th:value="${learnedField}+1">
-                    <input type="hidden" th:name="repeatedField" th:value="${repeatedField}">
-                    <input type="hidden" id="wrongChoice" th:name="wrongChoice" th:value="choice">
-                    <button type="submit" id="next_button"
-                            th:formaction="@{/learn/save/{wordId}(wordId = ${word.getId()})}">
-                        <p class="button_text_learn button_text" id="next_word">
-                            Next
+            <div th:if="${learnedField} == 0">
+                <div class="repeat_button" id="word_button1">
+                    <button class="button_learn button_2" type="button" th:id="${threeWords.get(0).getWord()}"
+                            th:onclick="'paintButton(\'' + ${word.getWord()} + '\', \'' + ${threeWords.get(0).getWord()} + '\');'">
+                        <p class="button_text_learn button_text" id="word1"
+                           th:utext="${threeWords.get(0).getWord()}">
+                            Word
                         </p>
                     </button>
                 </div>
-            </form>
+                <div class="repeat_button" id="word_button2">
+                    <button class="button_learn button_2" type="button" th:id="${threeWords.get(1).getWord()}"
+                            th:onclick="'paintButton(\'' + ${word.getWord()} + '\', \'' + ${threeWords.get(1).getWord()} + '\');'">
+                        <p class="button_text_learn button_text" id="word2"
+                           th:utext="${threeWords.get(1).getWord()}">
+                            Word
+                        </p>
+                    </button>
+                </div>
+                <div class="repeat_button" id="word_button3">
+                    <button class="button_learn button_2" type="button" th:id="${threeWords.get(2).getWord()}"
+                            th:onclick="'paintButton(\'' + ${word.getWord()} + '\', \'' + ${threeWords.get(2).getWord()} + '\');'">
+                        <p class="button_text_learn button_text" id="word3"
+                           th:utext="${threeWords.get(2).getWord()}">
+                            Word
+                        </p>
+                    </button>
+                </div>
+            </div>
+            <div class="small_button_block" th:if="${learnedField} == 1">
+                <div class="repeat_button" th:each="letter, stat : ${word.getArrayLetters()}">
+                    <button class="button_learn small_button_learn small_button_learn_up" type="button"
+                            th:id="${letter} + ${stat.index}">
+                        <p class="button_text_learn button_text" th:utext="${letter}">
+                            Word
+                        </p>
+                    </button>
+                </div>
+            </div>
+            <div class="small_button_block" th:if="${learnedField} == 1"
+                 th:with="arrayWord = ${word.getShuffleArrayLetters()}">
+                <div class="repeat_button" th:each="letter, stat : ${arrayWord}">
+                    <button class="button_learn small_button_learn" type="button"
+                            th:id="${letter} + ${stat.index} + 'down'"
+                            th:onclick="'choiceLetter(\'' + ${word.getWord()} + '\', \''+ ${letter} + '\', ' + this.id + ');'">
+                        <p class="button_text_learn button_text" th:utext="${letter}">
+                            Word
+                        </p>
+                    </button>
+                </div>
+            </div>
         </div>
+        <form th:method="GET">
+            <div class="repeat_button" th:id="next_button_div" style="display: none">
+                <input type="hidden" th:name="learnedField" th:value="${learnedField}+1">
+                <input type="hidden" th:name="repeatedField" th:value="${repeatedField}">
+                <input type="hidden" id="wrongChoice" th:name="wrongChoice" th:value="choice">
+                <button type="submit" id="next_button"
+                        th:formaction="@{/learn/save/{wordId}(wordId = ${word.getId()})}">
+                    <p class="button_text_learn button_text" id="next_word">
+                        Next
+                    </p>
+                </button>
+            </div>
+        </form>
     </div>
 
     <div th:replace="footer"></div>
