added third word`s learn choice

--- a/src/main/resources/templates/learn.html
+++ b/src/main/resources/templates/learn.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
     <script type="text/javascript" th:src="@{/js/script.js}"></script>
 </head>
-<body>
+<body th:onload="${learnedField} == 2 ? 'speak(\'' + ${word.getWord()} + '\');' : ''">
 <div class="container">
     <div th:replace="top"></div>
 
@@ -15,14 +15,30 @@
 
         <div class="table_sound">
             <div class="border_words_learn border_words">
-                <div class="words_learn words">
+                <div class="words_learn words ">
                     <p class="words_text" th:utext="${word.getTranslate()}"
-                       th:if="${learnedField} == 0 or ${learnedField} == 1"></p>
+                       th:if="${learnedField} == 0 or ${learnedField} == 1 or ${libraryIsLearned}">
+                    </p>
+                    <p class="words_text"
+                       th:utext="${wordsBlockIsLearned} ? ${wordsBlockIsLearned} : ${libraryIsLearned}"
+                       th:if="${wordsBlockIsLearned} or ${libraryIsLearned}">
+                    </p>
+                    <button class="sound_button ear_words_button" type="button"
+                            th:onload="'speak(\'' + ${word.getWord()} + '\');'"
+                            th:onclick="'speak(\'' + ${word.getWord()} + '\');'"
+                            th:if="${learnedField} == 2">
+                        <img th:src="@{/img/sound--green.svg}" alt="sound">
+                    </button>
+                    <div id="ear_word_guessed" style="visibility: hidden">
+                        <p class="words_text" th:utext="${word.getTranslate()}"></p>
+                        <p class="words_text" th:utext="${word.getTranscription()}"></p>
+                        <p class="words_text" th:utext="${word.getWord()}"></p>
+                    </div>
                 </div>
             </div>
         </div>
         <div>
-            <div th:if="${learnedField} == 0">
+            <div th:if="${learnedField} == 0 or ${learnedField} == 2">
                 <div class="repeat_button" id="word_button1">
                     <button class="button_learn button_2" type="button" th:id="${threeWords.get(0).getWord()}"
                             th:onclick="'paintButton(\'' + ${word.getWord()} + '\', \'' + ${threeWords.get(0).getWord()} + '\');'">
@@ -51,7 +67,7 @@
                     </button>
                 </div>
             </div>
-            <div class="small_button_block" th:if="${learnedField} == 1">
+            <div class="small_button_block" id="small_button_block1" th:if="${learnedField} == 1">
                 <div class="repeat_button" th:each="letter, stat : ${word.getArrayLetters()}">
                     <button class="button_learn small_button_learn small_button_learn_up" type="button"
                             th:id="${letter} + ${stat.index}">
@@ -61,7 +77,7 @@
                     </button>
                 </div>
             </div>
-            <div class="small_button_block" th:if="${learnedField} == 1"
+            <div class="small_button_block" id="small_button_block2" th:if="${learnedField} == 1"
                  th:with="arrayWord = ${word.getShuffleArrayLetters()}">
                 <div class="repeat_button" th:each="letter, stat : ${arrayWord}">
                     <button class="button_learn small_button_learn" type="button"
@@ -87,8 +103,8 @@
                 </button>
             </div>
         </form>
-        <form th:method="GET" th:if="wordsBlockIsLearned">
-            <div class="repeat_button" th:id="next_button_div">
+        <form th:method="GET" th:if="${wordsBlockIsLearned}">
+            <div class="repeat_button" th:id="next_button2_div">
                 <button type="submit" id="next_button2"
                         th:formaction="@{/learn/{id}(id = ${libraryId})}">
                     <p class="button_text_learn button_text" id="next_word2">
