--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -317,6 +317,7 @@ button:hover {
 .small_button_block {
   display: flex;
   justify-content: center;
+  min-height: 7vh;
 }
 
 .small_button_learn_up {
@@ -332,4 +333,10 @@ button:hover {
 .button_text_learn {
   color: #000000;
   line-height: 1;
+}
+
+.ear_words_button {
+  width: 12%;
+  margin-top: -2vh;
+  margin-left: 45%;
 }
