--- a/src/main/resources/templates/learn.html
+++ b/src/main/resources/templates/learn.html
@@ -16,21 +16,22 @@
         <div class="table_sound">
             <div class="border_words_learn border_words">
                 <div class="words_learn words ">
+                    <button class="sound_button ear_words_button" type="button"
+                            th:onclick="'speak(\'' + ${word.getWord()} + '\');'"
+                            th:if="${learnedField} == 2">
+                        <img th:src="@{/img/sound--green.svg}" alt="sound">
+                    </button>
                     <p class="words_text" th:utext="${word.getTranslate()}"
-                       th:if="${learnedField} == 0 or ${learnedField} == 1 or ${libraryIsLearned}">
+                       th:if="${learnedField} == 0 or ${learnedField} == 1 or ${learnedField} == 3">
                     </p>
                     <p class="words_text"
                        th:utext="${wordsBlockIsLearned} ? ${wordsBlockIsLearned} : ${libraryIsLearned}"
                        th:if="${wordsBlockIsLearned} or ${libraryIsLearned}">
                     </p>
-                    <button class="sound_button ear_words_button" type="button"
-                            th:onload="'speak(\'' + ${word.getWord()} + '\');'"
-                            th:onclick="'speak(\'' + ${word.getWord()} + '\');'"
-                            th:if="${learnedField} == 2">
-                        <img th:src="@{/img/sound--green.svg}" alt="sound">
-                    </button>
-                    <div id="ear_word_guessed" style="visibility: hidden">
+                    <div id="ear_word_guessed" th:if="${learnedField} == 2" style="visibility: hidden">
                         <p class="words_text" th:utext="${word.getTranslate()}"></p>
+                    </div>
+                    <div id="word_guessed" style="visibility: hidden">
                         <p class="words_text" th:utext="${word.getTranscription()}"></p>
                         <p class="words_text" th:utext="${word.getWord()}"></p>
                     </div>
@@ -89,12 +90,18 @@
                     </button>
                 </div>
             </div>
+            <div class="input_div" th:if="${learnedField} == 3">
+                <input class="login_text input_text" type="text" th:id="input_text" placeholder="Type the text">
+                <img class="input_arrow" th:src="@{/img/arrow.png}" alt="arrow"
+                     th:onclick="'checkInput(\'' + ${word.getWord()} + '\');'">
+            </div>
         </div>
         <form th:method="GET">
             <div class="repeat_button" th:id="next_button_div" style="display: none">
                 <input type="hidden" th:name="learnedField" th:value="${learnedField}+1">
                 <input type="hidden" th:name="repeatedField" th:value="${repeatedField}">
                 <input type="hidden" id="wrongChoice" th:name="wrongChoice" th:value="choice">
+                <input type="hidden" id="checkedInput" th:name="checkedInput" th:value="choice">
                 <button type="submit" id="next_button"
                         th:formaction="@{/learn/save/{wordId}(wordId = ${word.getId()})}">
                     <p class="button_text_learn button_text" id="next_word">
